--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>SwapiConFront.example</groupId>
 	<artifactId>SwapiConFront</artifactId>
-	<version>0.2-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>SwapiConFront</name>
 	<description>SwapiConFront</description>
 	<properties>
